--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_menus__carta">Menus_CartaActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
